<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PostDetailsFragment" >

    <ImageButton
        android:id="@+id/editPostBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_edit"
        android:tint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deletePostBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/editPostBtn"
        app:layout_constraintEnd_toStartOf="@+id/editPostBtn"
        app:layout_constraintTop_toTopOf="@+id/editPostBtn"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/backBtn"
        android:contentDescription="@string/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_back"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView48"
        style="@style/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Post"
        app:layout_constraintBottom_toBottomOf="@+id/backBtn"
        app:layout_constraintStart_toEndOf="@+id/backBtn"
        app:layout_constraintTop_toTopOf="@+id/backBtn" />

    <TextView
        android:id="@+id/posterText"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="Mr Chegg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/postDateText"
        style="@style/c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="postDate"
        app:layout_constraintStart_toStartOf="@+id/posterText"
        app:layout_constraintTop_toBottomOf="@+id/posterText" />

    <TextView
        android:id="@+id/postDescText"
        style="@style/c1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/postDateText"
        app:layout_constraintTop_toBottomOf="@+id/postDateText" />

    <ImageView
        android:id="@+id/postPic"
        android:contentDescription="@string/post_picture"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/round_outline"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        android:src="@drawable/coffee1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postDescText" />

    <ImageButton
        android:id="@+id/postUpVoteBtn"
        android:contentDescription="@string/upvote"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_like"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postPic" />

    <ImageButton
        android:id="@+id/postDownVoteBtn"
        android:contentDescription="@string/downvote"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_dislike"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/postUpVoteBtn"
        app:layout_constraintStart_toEndOf="@+id/postUpVoteBtn"
        app:layout_constraintTop_toTopOf="@+id/postUpVoteBtn" />

    <TextView
        android:id="@+id/postVoteCountText"
        style="@style/c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="@+id/postDownVoteBtn"
        app:layout_constraintStart_toEndOf="@+id/postDownVoteBtn"
        app:layout_constraintTop_toTopOf="@+id/postDownVoteBtn" />

    <ImageButton
        android:id="@+id/reportBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_report"
        app:layout_constraintBottom_toBottomOf="@+id/textView48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView48" />
</androidx.constraintlayout.widget.ConstraintLayout>