<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.CoffeeDetailsFragment">

    <ImageView
        android:id="@+id/coffeeDetailsPic"
        android:contentDescription="@string/coffee"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/round_outline"
        android:clipToOutline="true"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee1" />

    <ImageButton
        android:id="@+id/editCoffeeBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_edit"
        android:tint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/coffeeDetailsBackBtn"
        android:contentDescription="@string/back"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:elevation="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/coffeeDetailsNameText"
        style="@style/h1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        android:layout_marginStart="24dp"
        android:text="barista name"
        android:textColor="@color/pure_white"
        app:layout_constraintBottom_toTopOf="@+id/baristaNameCoffeeDetailsText"
        app:layout_constraintStart_toStartOf="@+id/coffeeDetailsPic" />

    <TextView
        android:id="@+id/baristaNameCoffeeDetailsText"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:elevation="8dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        android:textColor="@color/pure_white"
        app:layout_constraintBottom_toBottomOf="@+id/coffeeDetailsPic"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/baristaLocationCoffeeDetailsText"
        style="@style/c1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="TextView"
        android:textColor="@color/pure_white"
        app:layout_constraintBottom_toBottomOf="@+id/baristaNameCoffeeDetailsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/baristaNameCoffeeDetailsText" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeDetailsPic"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/coffeeDescCoffeeDetailsText"
                style="@style/c1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:text="TextView" />

            <TextView
                android:id="@+id/textView13"
                style="@style/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:text="Rating" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/noRatingText"
                    style="@style/c1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="No rating yet..."
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/ratingRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView14"
                style="@style/h2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="24dp"
                android:text="Ingredients" />

            <TextView
                android:id="@+id/ingredientText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="40dp"
                style="@style/c1"
                android:text="No ingredients..." />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/linear_gray_background"
        >

        <TextView
            android:id="@+id/textView16"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="RM"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalPriceCoffeeDetailsText"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"
            app:layout_constraintStart_toEndOf="@+id/textView16"
            app:layout_constraintTop_toTopOf="@+id/textView16" />

        <ImageButton
            android:id="@+id/plusBtnCoffeeDetails"
            android:contentDescription="@string/delete_coffee"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/noOfCoffeeOrderedText"
            app:layout_constraintStart_toEndOf="@+id/noOfCoffeeOrderedText"
            app:layout_constraintTop_toTopOf="@+id/noOfCoffeeOrderedText"
            app:srcCompat="@drawable/ic_plus" />

        <TextView
            android:id="@+id/noOfCoffeeOrderedText"
            style="@style/c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            app:layout_constraintBottom_toBottomOf="@+id/minusBtnCoffeeDetails"
            app:layout_constraintStart_toEndOf="@+id/minusBtnCoffeeDetails"
            app:layout_constraintTop_toTopOf="@+id/minusBtnCoffeeDetails" />

        <ImageButton
            android:id="@+id/minusBtnCoffeeDetails"
            android:contentDescription="@string/add_coffee"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:background="@color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalPriceCoffeeDetailsText"
            app:srcCompat="@drawable/ic_minus" />

        <Button
            android:id="@+id/addToCartBtnCoffeeDetails"
            style="@style/smallPrimaryBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="Add to Cart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageButton
        android:id="@+id/deleteCoffeeBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@+id/editCoffeeBtn"
        app:layout_constraintEnd_toStartOf="@+id/editCoffeeBtn"
        app:layout_constraintTop_toTopOf="@+id/editCoffeeBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>